; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/util/storage/extr_lruhash.c_bin_delete.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/util/storage/extr_lruhash.c_bin_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lruhash = type { i32, i32 (i8*, i32)*, i32 (i32, i32)* }
%struct.lruhash_bin = type { %struct.lruhash_entry*, i32 }
%struct.lruhash_entry = type { i32, i8*, %struct.lruhash_entry* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bin_delete(%struct.lruhash* %0, %struct.lruhash_bin* %1) #0 {
  %3 = alloca %struct.lruhash*, align 8
  %4 = alloca %struct.lruhash_bin*, align 8
  %5 = alloca %struct.lruhash_entry*, align 8
  %6 = alloca %struct.lruhash_entry*, align 8
  %7 = alloca i8*, align 8
  store %struct.lruhash* %0, %struct.lruhash** %3, align 8
  store %struct.lruhash_bin* %1, %struct.lruhash_bin** %4, align 8
  %8 = load %struct.lruhash_bin*, %struct.lruhash_bin** %4, align 8
  %9 = icmp ne %struct.lruhash_bin* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  br label %49

11:                                               ; preds = %2
  %12 = load %struct.lruhash_bin*, %struct.lruhash_bin** %4, align 8
  %13 = getelementptr inbounds %struct.lruhash_bin, %struct.lruhash_bin* %12, i32 0, i32 1
  %14 = call i32 @lock_quick_destroy(i32* %13)
  %15 = load %struct.lruhash_bin*, %struct.lruhash_bin** %4, align 8
  %16 = getelementptr inbounds %struct.lruhash_bin, %struct.lruhash_bin* %15, i32 0, i32 0
  %17 = load %struct.lruhash_entry*, %struct.lruhash_entry** %16, align 8
  store %struct.lruhash_entry* %17, %struct.lruhash_entry** %5, align 8
  %18 = load %struct.lruhash_bin*, %struct.lruhash_bin** %4, align 8
  %19 = getelementptr inbounds %struct.lruhash_bin, %struct.lruhash_bin* %18, i32 0, i32 0
  store %struct.lruhash_entry* null, %struct.lruhash_entry** %19, align 8
  br label %20

20:                                               ; preds = %23, %11
  %21 = load %struct.lruhash_entry*, %struct.lruhash_entry** %5, align 8
  %22 = icmp ne %struct.lruhash_entry* %21, null
  br i1 %22, label %23, label %49

23:                                               ; preds = %20
  %24 = load %struct.lruhash_entry*, %struct.lruhash_entry** %5, align 8
  %25 = getelementptr inbounds %struct.lruhash_entry, %struct.lruhash_entry* %24, i32 0, i32 2
  %26 = load %struct.lruhash_entry*, %struct.lruhash_entry** %25, align 8
  store %struct.lruhash_entry* %26, %struct.lruhash_entry** %6, align 8
  %27 = load %struct.lruhash_entry*, %struct.lruhash_entry** %5, align 8
  %28 = getelementptr inbounds %struct.lruhash_entry, %struct.lruhash_entry* %27, i32 0, i32 1
  %29 = load i8*, i8** %28, align 8
  store i8* %29, i8** %7, align 8
  %30 = load %struct.lruhash*, %struct.lruhash** %3, align 8
  %31 = getelementptr inbounds %struct.lruhash, %struct.lruhash* %30, i32 0, i32 2
  %32 = load i32 (i32, i32)*, i32 (i32, i32)** %31, align 8
  %33 = load %struct.lruhash_entry*, %struct.lruhash_entry** %5, align 8
  %34 = getelementptr inbounds %struct.lruhash_entry, %struct.lruhash_entry* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 8
  %36 = load %struct.lruhash*, %struct.lruhash** %3, align 8
  %37 = getelementptr inbounds %struct.lruhash, %struct.lruhash* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 8
  %39 = call i32 %32(i32 %35, i32 %38)
  %40 = load %struct.lruhash*, %struct.lruhash** %3, align 8
  %41 = getelementptr inbounds %struct.lruhash, %struct.lruhash* %40, i32 0, i32 1
  %42 = load i32 (i8*, i32)*, i32 (i8*, i32)** %41, align 8
  %43 = load i8*, i8** %7, align 8
  %44 = load %struct.lruhash*, %struct.lruhash** %3, align 8
  %45 = getelementptr inbounds %struct.lruhash, %struct.lruhash* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 8
  %47 = call i32 %42(i8* %43, i32 %46)
  %48 = load %struct.lruhash_entry*, %struct.lruhash_entry** %6, align 8
  store %struct.lruhash_entry* %48, %struct.lruhash_entry** %5, align 8
  br label %20

49:                                               ; preds = %10, %20
  ret void
}

declare dso_local i32 @lock_quick_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
